[package]
name = "zenoh-hammer"
version = "0.11.0"
edition = "2021"

[[example]]
name = "show_hex_viewer"
path = "examples/show_hex_viewer.rs"

[[example]]
name = "show_sample_viewer"
path = "examples/show_sample_viewer.rs"

[[example]]
name = "show_payload_editor"
path = "examples/show_payload_editor.rs"

[profile.release-lto]
inherits = "release"
lto = true

[dependencies]
arboard = { version = "3.6" }
directories = { version = "6.0" }
eframe = { version = "0.33", default-features = false, features = [ "persistence", "wgpu", "wayland", "x11" ] }
egui_dnd = { version = "0.14" }
egui_extras = { version = "0.33" }
egui_file = { version = "0.24" }
egui_json_tree = { version = "0.14" }
egui_plot = { version = "0.34" }
env_logger = { version = "0.11" }
flume = { version = "0.11" }
hex = { version = "0.4" }
image = { version = "0.25", default-features = false, features = [ "png", "jpeg", "bmp", "gif", "webp" ] }
json5 = { version = "0.4" }
log = { version = "0.4" }
num_enum = { version = "0.7" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
size_fmt = { version = "0.1" }
static-toml = { version = "1.3" }
strum = { version = "0.27", features = [ "derive" ] }
tokio = { version = "1.47", default-features = false }
uhlc = { version = "0.8" }
wgpu = { version = "27" }
zenoh = { version = "1.6.2", features = [ "default", "unstable", "internal" ] }
